<resources>
    <string name="app_name">Kiwi</string>
    <string name="action_settings">Settings</string>
    <string name="text_check_in">Check in</string>
    <string name="text_last_checkin">Last check-in:</string>
    <string name="title_activity_config">App Configurations</string>
    <string name="label_server_ip">Server:</string>
    <string name="text_ssid">WiFi network (SSID):</string>
    <string name="text_save">Save</string>
    <string name="error_invalid_server_address">Invalid server address</string>
    <string name="error_invalid_ssid">Invalid SSID</string>
    <string name="server_prompt">192.168.4.44:3000</string>
    <string name="ssid_prompt">East Agile F1</string>
    <string name="error_check_in_failed">Failed to check in now</string>
    <string name="error_no_checkin_server_found">"No checkin server found at "</string>
    <string name="message_validating_server">Validating server ...</string>
    <string name="state_checked_in_well">Checked in well</string>
    <string name="state_checking_in">Checking in ...</string>
    <string name="failed_checking_in">Failed checking in</string>
    <string name="hint_ssid">WiFi at your office</string>
    <string name="hint_server_address">Address of checkin server</string>
</resources>
