<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="mobi.kiwi.kiwi.ConfigActivity">

    <TextView
        android:id="@+id/server_ip_label"
        android:text="@string/label_server_ip"
        android:hint="@string/hint_server_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_below="@id/server_ip_label"
        android:id="@+id/server_ip_edit_text"
        android:layout_width="fill_parent"
        android:text="@string/server_prompt"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="@dimen/input_section_margin_top"
        android:layout_below="@id/server_ip_edit_text"
        android:id="@+id/ssid_label"
        android:text="@string/text_ssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_below="@id/ssid_label"
        android:id="@+id/ssid_edit_text"
        android:text="@string/ssid_prompt"
        android:hint="@string/hint_ssid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:onClick="onSaveConfig"
        android:layout_marginTop="@dimen/button_save_margin_top"
        android:layout_centerHorizontal="true"
        android:text="@string/text_save"
        android:layout_below="@id/ssid_edit_text"
        android:padding="@dimen/button_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>




</RelativeLayout>
