<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <TextView
        android:textSize="@dimen/checkin_label_size"
        android:id="@+id/last_checkin_label"
        android:text="@string/text_last_checkin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginLeft="@dimen/last_checkin_left_margin"
        android:layout_toRightOf="@id/last_checkin_label"
        android:id="@+id/last_checkin_text_view"
        android:layout_width="fill_parent"
        android:textSize="@dimen/checkin_label_size"
        android:layout_height="wrap_content"/>

    <com.dd.processbutton.iml.ActionProcessButton
        android:onClick="checkin"
        android:layout_centerInParent="true"
        android:id="@+id/checkin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/checkin_padding_left_right"
        android:paddingRight="@dimen/checkin_padding_left_right"
        android:text="@string/text_check_in"
        android:textColor="@android:color/white"
        android:textSize="@dimen/checkin_button_text_size"
        custom:pb_colorComplete="@color/green_complete"
        custom:pb_colorNormal="@color/button_checkin_normal"
        custom:pb_colorPressed="@color/blue_pressed"
        custom:pb_colorProgress="@color/purple_progress"
        custom:pb_textComplete="@string/state_checked_in_well"
        custom:pb_textProgress="@string/state_checking_in"
        custom:pb_textError="@string/failed_checking_in"
        custom:pb_colorError="@color/red_error" />

</RelativeLayout>
